--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 	<br>
 	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20Quiero%20Adquirir%20un%20Dispositivo%20TAG%20Tele%20Peaje%20">Adquiere tu Tag</a>
 
-	<a href="javascript:sms()">Como Instalar tu Dispostivo Tag</a>
+	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20instalar%20un%20dispositivo%20TAG%20Tele%20Peaje%20">Como Instalar tu Dispostivo Tag</a>
 
-	<a href="javascript:sms()">Como Activar Tu Tag</a>
+	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20Activar%20un%20dispositivo%20TAG%20Tele%20Peaje%20">Como Activar Tu Tag</a>
 
-	<a href="javascript:sms()">Como Recargar</a>
+	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20Recargar%20un%20dispositivo%20TAG%20Tele%20Peaje%20">Como Recargar</a>
 
 	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20Quiero%20Información%20acerca%20del%20Dispositivo%20TAG%20Para%20Tele%20Peaje%20">Contacta con un Asesor</a>
 
