--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
  <!-- redes sociales  -->
 		<section class="redes-sociales" id="redes">
-			<a href="https://api.whatsapp.com/send?phone=593995468983"  class="whatsapp" target="black" ><span class="fa fa-whatsapp"></span ></a>
+			<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20estoy%20contactando%20desde%20La Tarjeta Digital de Universal TAG"  class="whatsapp" target="black" ><span class="fa fa-whatsapp"></span ></a>
 			<a href="https://www.facebook.com/Ecualabelstag/"  class="facebook" target="black" ><span class="fa fa-facebook"></span></a>
 			<a href="https://g.page/ECUALABELS?" class="instagram" target="black" ><span class="fa fa-map-marker"></span></a>
 			<a href="tel:0995468983" class="phone"><span class="fa fa-phone"></span></a>
