--- a/index.html
+++ b/index.html
@@ -57,25 +57,6 @@
 		 </div>
 	<div class="ecu" lang="en"><p >ECUA-LABELS</p></div>
 	<br>
-	 <!-- incio macion -->
-	 
-
-<section class="informacion" id="informacion">
-
-	        <img src="img/iconoecua.png"  alt="logo">
-			 <p><h2 class="titulo" lang="en">UNIVERSAL TAG</h2></p>
-			 <br>
-			 <section class="bt">
-			 <a href="javascript:portafolio()" class="boton" id="inicio" ><span class="fa fa-home"></span >&nbsp;INICIO</a>
-			</section>
-			<br>
-		<p> <h6>ADQUIERE TU TAG</h6> </p>
-	<br>
-         <p class="qr"><img src="img/qr-ecualbels.png" alt="logoQR"></p>
-		 <p class="scan">Scan Me</p>
-		</section>
-
-  
 
 		<!-- screen 1  -->
 
@@ -90,11 +71,23 @@
 
 	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20instalar%20un%20dispositivo%20TAG%20Tele%20Peaje%20">Como Instalar tu Dispostivo Tag</a>
 
-	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20Activar%20un%20dispositivo%20TAG%20Tele%20Peaje%20">Como Activar Tu Tag</a>
+	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20Activar%20mi%20dispositivo%20TAG%20Tele%20Peaje%0A
+	*TAG UNIVERSAL ECUA LABELS*%0ASe homologa para los peajes de Pichincha, Túneles de Guayasamín y Panavial%0A*Peaje Pichincha*:%0A  Cobertura: Autopista general Rumiñahui, Intervalles.%0A
+	Para registrar el tag Debe acudir a un centro de atención, los mismos que están ubicados en:
+	Centro Comercial Plaza del Valle, local A08A, ubicado en la Av. Ilaló y Av. Gral. Enríquez, San Rafael sector El Triángulo 
+	Centro Comercial Ventura Mall Km 14 1/2, vía Inter oceanica, local 07, planta baja
+	Edificio principal de la Prefectura de Pichincha, acceso 1, calle Manuel Larrea N13-45 y Antonio Ante%0A
+	*Peaje Guayasamín*:%0A
+	Cobertura: Túneles de Guayasamín.
+	Ingresar en  https://www.peajeguayasamin.ec y llenar la información que solicita el sistema para la homologación del tag, debe tener a la mano fotografía del documento de identidad, fotografía de matrícula del vehículo, fotografía del tag.
+	%0A*Peaje Panavial*:%0A
+	Cobertura: Red de peajes Panavial.
+	Para registrar el tag el usuario puede dirigirse a cualquier oficina Panavial ubicada en los peajes del circuito con copia de matrícula y copia de cedula. 
+	También puede enviar imagen de cedula, matricula y código del tag a serviciocliente@panavial.com%0A">Como Activar Tu Tag</a>
 
-	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20Recargar%20un%20dispositivo%20TAG%20Tele%20Peaje%20">Como Recargar</a>
+	<a href="javascript:recarga()">Como Recargar</a>
 
-	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20Quiero%20Información%20acerca%20del%20Dispositivo%20TAG%20Para%20Tele%20Peaje%20">Contacta con un Asesor</a>
+	<a href="https://drive.google.com/u/0/uc?id=11scS_e_AH5YWVI75iphmkCp5qkOtE5Fy&export=download" target="_blank">Descargar PDF</a>
 
 
 
@@ -102,6 +95,57 @@
 </div>
 
 </section>
+
+ <!-- codigoQR -->
+	 
+
+ <section class="informacion" id="informacion">
+
+	<img src="img/iconoecua.png"  alt="logo">
+	 <p><h2 class="titulo" lang="en">UNIVERSAL TAG</h2></p>
+	 <br>
+	 <section class="bt">
+	 <a href="javascript:portafolio()" class="boton" id="inicio" ><span class="fa fa-home"></span >&nbsp;INICIO</a>
+	</section>
+	<br>
+<p> <h6>ADQUIERE TU TAG</h6> </p>
+<br>
+ <p class="qr"><img src="img/qr-ecualbels.png" alt="logoQR"></p>
+ <p class="scan">Scan Me</p>
+</section>
+
+
+
+ <!-- recarga -->
+	 
+
+ <section class="recarga" id="recarga">
+
+	<img src="img/iconoecua.png"  alt="logo">
+	 <h4 class="titulo" lang="en">UNIVERSAL TAG</h4>
+	 <h6>Recarga tu Dispotivo</h6>
+	 <br>
+<h5>1 Pichincha</h5>
+
+<p>Presencial: Primera recarga ( Cc Plaza del Valle , Cc Ventura Mall ) y (Prefectura del Centro)</p>
+<p>On line : <a class="r" href="https://peajespichincha.ec/pages/inic/sgk_login_c.aspx">Peajes Pichincha.ec</a></p>
+	<br>
+	<h5>2 Guayasamín</h5> 
+
+	<p>Presencial: Cc Ventura Mall Av Amazonas y Pereira (municipio de quitó)</p>
+	<p>On line : <a class="r" href="https://www.peajeguayasamin.ec">Peajes Guayasamin.ec</a></p>
+	<br>
+	<h5>3 Panavial</h5>
+
+	 <p>Presencial : Cajas de Cobro Manuales y Mediante Transferencia</p>
+	
+	 <br>
+
+	 <a href="javascript:portafolio()" class="ratras" ><span class="fa fa-home"></span >&nbsp;INICIO</a>
+
+
+</section>
+
 		
 <!-- screen 4  -->
 
