--- a/index.html
+++ b/index.html
@@ -71,15 +71,18 @@
 
 	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20instalar%20un%20dispositivo%20TAG%20Tele%20Peaje%20">Como Instalar tu Dispostivo Tag</a>
 
-	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20Activar%20mi%20dispositivo%20TAG%20Tele%20Peaje%0A
-	*TAG UNIVERSAL ECUA LABELS*%0ASe homologa para los peajes de Pichincha, Túneles de Guayasamín y Panavial%0A*Peaje Pichincha*:%0A  Cobertura: Autopista general Rumiñahui, Intervalles.%0A
+	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20Activar%20mi%20dispositivo%20TAG%20Tele%20Peaje%0Ahttps://ecualabelstag.blogspot.com%0A
+	*TAG UNIVERSAL ECUA LABELS*%0ASe homologa para los peajes de Pichincha, Túneles de Guayasamín y Panavial%0A
+	*Peaje Pichincha*:%0A
+	https://peajespichincha.ec%0A
+	Cobertura: Autopista general Rumiñahui, Intervalles.%0A
 	Para registrar el tag Debe acudir a un centro de atención, los mismos que están ubicados en:
 	Centro Comercial Plaza del Valle, local A08A, ubicado en la Av. Ilaló y Av. Gral. Enríquez, San Rafael sector El Triángulo 
 	Centro Comercial Ventura Mall Km 14 1/2, vía Inter oceanica, local 07, planta baja
 	Edificio principal de la Prefectura de Pichincha, acceso 1, calle Manuel Larrea N13-45 y Antonio Ante%0A
 	*Peaje Guayasamín*:%0A
 	Cobertura: Túneles de Guayasamín.
-	Ingresar en  https://www.peajeguayasamin.ec y llenar la información que solicita el sistema para la homologación del tag, debe tener a la mano fotografía del documento de identidad, fotografía de matrícula del vehículo, fotografía del tag.
+	%0Ahttps://www.peajeguayasamin.ec%0A Ingresa la información que solicita el sistema para la homologación del tag, debe tener a la mano fotografía del documento de identidad, fotografía de matrícula del vehículo, fotografía del tag.
 	%0A*Peaje Panavial*:%0A
 	Cobertura: Red de peajes Panavial.
 	Para registrar el tag el usuario puede dirigirse a cualquier oficina Panavial ubicada en los peajes del circuito con copia de matrícula y copia de cedula. 
