--- a/index.html
+++ b/index.html
@@ -65,32 +65,18 @@
 <div>
 
 	<img src="img/iconoecua.png"  alt="logo">
+	<h5>UNIVERSAL TAG</h5>
 
 	<br>
 	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20Quiero%20Adquirir%20un%20Dispositivo%20TAG%20Tele%20Peaje%20">Adquiere tu Tag</a>
 
-	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20instalar%20un%20dispositivo%20TAG%20Tele%20Peaje%20">Como Instalar tu Dispostivo Tag</a>
-
-	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20quiero%20información%20de%20como%20Activar%20mi%20dispositivo%20TAG%20Tele%20Peaje%0Ahttps://ecualabelstag.blogspot.com%0A
-	*TAG UNIVERSAL ECUA LABELS*%0ASe homologa para los peajes de Pichincha, Túneles de Guayasamín y Panavial%0A
-	*Peaje Pichincha*:%0A
-	https://peajespichincha.ec%0A
-	Cobertura: Autopista general Rumiñahui, Intervalles.%0A
-	Para registrar el tag Debe acudir a un centro de atención, los mismos que están ubicados en:
-	Centro Comercial Plaza del Valle, local A08A, ubicado en la Av. Ilaló y Av. Gral. Enríquez, San Rafael sector El Triángulo 
-	Centro Comercial Ventura Mall Km 14 1/2, vía Inter oceanica, local 07, planta baja
-	Edificio principal de la Prefectura de Pichincha, acceso 1, calle Manuel Larrea N13-45 y Antonio Ante%0A
-	*Peaje Guayasamín*:%0A
-	Cobertura: Túneles de Guayasamín.
-	%0Ahttps://www.peajeguayasamin.ec%0A Ingresa la información que solicita el sistema para la homologación del tag, debe tener a la mano fotografía del documento de identidad, fotografía de matrícula del vehículo, fotografía del tag.
-	%0A*Peaje Panavial*:%0A
-	Cobertura: Red de peajes Panavial.
-	Para registrar el tag el usuario puede dirigirse a cualquier oficina Panavial ubicada en los peajes del circuito con copia de matrícula y copia de cedula. 
-	También puede enviar imagen de cedula, matricula y código del tag a serviciocliente@panavial.com%0A">Como Activar Tu Tag</a>
+	<a href="javascript:activar()">Como Activar Tu Tag</a>
 
 	<a href="javascript:recarga()">Como Recargar</a>
 
-	<a href="https://drive.google.com/u/0/uc?id=11scS_e_AH5YWVI75iphmkCp5qkOtE5Fy&export=download" target="_blank">Descargar PDF</a>
+	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20Quiero%20Contactar%20con%20un%20Asesor%20">Asesoría</a>
+
+	<a href="javascript:dpdf()">Descargar PDF</a>
 
 
 
@@ -106,6 +92,7 @@
 
 	<img src="img/iconoecua.png"  alt="logo">
 	 <p><h2 class="titulo" lang="en">UNIVERSAL TAG</h2></p>
+
 	 <br>
 	 <section class="bt">
 	 <a href="javascript:portafolio()" class="boton" id="inicio" ><span class="fa fa-home"></span >&nbsp;INICIO</a>
@@ -117,16 +104,62 @@
  <p class="scan">Scan Me</p>
 </section>
 
+<!-- activar -->
+	 
 
+<section class="activar" id="activar">
+<br>
+	<img src="img/iconoecua.png"  alt="logo">
+	 <h4 class="titulo" lang="en">Activar tu Dispotivo</h4>
+	 <h6>Universal TAG</h6>
+	 <br>
+<h5>TAG UNIVERSAL ECUA LABELS</h5>
+<p>Se homologa para los peajes de Pichincha, Túneles de Guayasamín y Panavial.</p>
+<br>
+<h5>Peaje Pichincha:</h5>
+<p>Cobertura: Autopista general Rumiñahui, Intervalles.</p>
+<p>On line : <a class="r" href="https://peajespichincha.ec/pages/inic/sgk_login_c.aspx">Peajes Pichincha.ec</a></p>
+<br>
+<p>Para registrar el tag Debe acudir a un centro de atención, los mismos que están ubicados en:</p>
+<ul>
+	<li>• Centro Comercial Plaza del Valle, local A08A, ubicado en la Av. Ilaló y Av. Gral. Enríquez, San Rafael (sector El Triángulo). </li>
+	<li>• Centro Comercial Ventura Mall Km 14 1/2, vía Inter oceanica, local 07, planta baja</li>
+	<li>• Edificio principal de la Prefectura de Pichincha, acceso 1, calle Manuel Larrea N13-45 y Antonio Ante</li>
+</ul>
+<br>
+<h5>Peaje Guayasamín:</h5>
+<p>Cobertura: Túneles de Guayasamín.</p>
+<br>
+<p>Ingresar <a class="r" href="https://www.peajeguayasamin.ec">Peajes Guayasamin.ec</a> llena la información que solicita el sistema para la homologación del tag, debe tener a la mano fotografía del documento de identidad, matrícula del vehículo y del tag.</p>
+<p>Primera recarga Presencial: ( Cc Plaza del Valle , Cc Ventura Mall ) y (Prefectura del Centro)</p>
+<br>
+<h5>Peaje Panavial:</h5>
+<p>Cobertura: Red de Peajes Panavial.</p>
+<p>On line : <a class="r" href="https://www.panavial.com">Panavial.com</a></p>
+<br>
+<p>• Para registrar el tag el usuario puede dirigirse a cualquier oficina Panavial ubicada en los peajes del circuito con copia de matrícula y copia de cedula. </p>
+<br>
+<p>• También puede enviar imagen de cedula, matricula y código del tag a <a href="mailto:serviciocliente@panavial.com">serviciocliente@panavial.com</a></p>
+
+
+	
+
+	
+	 <br>
+
+	 <a href="javascript:portafolio()" class="ratras" ><span class="fa fa-home"></span >&nbsp;INICIO</a>
+
+
+</section>
 
  <!-- recarga -->
 	 
 
  <section class="recarga" id="recarga">
-
+<br>
 	<img src="img/iconoecua.png"  alt="logo">
-	 <h4 class="titulo" lang="en">UNIVERSAL TAG</h4>
-	 <h6>Recarga tu Dispotivo</h6>
+	 <h4 class="titulo" lang="en">Recarga tu Dispotivo</h4>
+	 <h6>Universal TAG</h6>
 	 <br>
 <h5>1 Pichincha</h5>
 
@@ -141,6 +174,7 @@
 	<h5>3 Panavial</h5>
 
 	 <p>Presencial : Cajas de Cobro Manuales y Mediante Transferencia</p>
+	 <p>On line : <a class="r" href="https://www.panavial.com">Panavial.com</a></p>
 	
 	 <br>
 
