--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 
 	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20Quiero%20Contactar%20con%20un%20Asesor%20">Asesoría</a>
 
+	<a href="https://youtube.com/playlist?list=PLjsdbOsXCJDFBeEHxRl8DCBHm5rYYUcH4"><span class="fa fa-youtube-play"></span >&nbsp;&nbsp;Videos</a>
+
 	<a href="javascript:dpdf()">Descargar PDF</a>
 
 
