--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
 <a class="side3" href="javascript:inicio()">Código QR</a>
 
+<a class="side3" href="javascript:admin()"><span class="fa fa-lock"></span >&nbsp;&nbsp;Admin</a>
+
 <a class="side3" href="https://cliconline.github.io/CliconlineStudios/networks.html">Network</a>
 
 <a href="https://play.google.com/store/apps/details?id=io.kodular.will_i_amw07_wp.Cliconline&hl=es">App</a>
@@ -67,7 +69,6 @@
 	<img src="img/iconoecua.png"  alt="logo">
 	<h5>UNIVERSAL TAG</h5>
 
-	<br>
 	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20Quiero%20Adquirir%20un%20Dispositivo%20TAG%20Tele%20Peaje%20">Adquiere tu Tag</a>
 
 	<a href="javascript:activar()">Como Activar Tu Tag</a>
@@ -77,11 +78,10 @@
 	<a href="https://api.whatsapp.com/send?phone=593995468983&text=Hola,%20Quiero%20Contactar%20con%20un%20Asesor%20">Asesoría</a>
 
 	<a href="https://youtube.com/playlist?list=PLjsdbOsXCJDFBeEHxRl8DCBHm5rYYUcH4"><span class="fa fa-youtube-play"></span >&nbsp;&nbsp;Videos</a>
-
+	
 	<a href="javascript:dpdf()">Descargar PDF</a>
 
-
-
+	
 
 </div>
 
@@ -190,75 +190,36 @@
 
 <section class="screen4" id="screen4">
 
-	<form action="" class="formulario">
+
+	<iframe src="https://peajespichincha.ec/pages/inic/sgk_login_C.aspx" width="100%" height="600" id="linkok" class="linkok"></iframe>
+
+
+	<form action="" class="formulario" id="admiok">
 		<img src="img/iconoecua.png" class="imgLogo" />
   
 		<h1 class="formulario__titulo">UNIVERSAL TAG</h1>
 		
 		<p class="formulario__parrafo">
-			Solicítar Dispositivo Tag
+			ECUA-LABELS
 		</p>
   <br>
-		<label for="cliente" class="formulario__label">Nombre y Apellido</label>
+		<label for="cliente" class="formulario__label">Clave de Administrador</label>
 		<input
-		  id="cliente"
-		  type="text"
+		  id="clave"
+		  type="password"
 		  class="formulario__input"
-		  placeholder="Ingresa tu Nombre"
+		  placeholder="Ingresa tu Código"
 		/>
 
-		<label for="contacto" class="formulario__label">Número de Contacto</label>
-		<input
-		  id="contacto"
-		  type="text"
-		  class="formulario__input"
-		  placeholder="Número Celular o Fijo"
-		/>
-  
-		<label for="fecha" class="formulario__label"
-		  >Fecha</label
-		>
-		<input
-		  id="fecha"
-		  type="date"
-		  class="formulario__input"
-		  pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
-		/>
-
-		<label for="empleado" class="formulario__label"
-		  >Solicitar</label
-		>
-		<select id="venta" name="listaventa" class="formulario__input">
-		  <option>Dispositivo TAG</option>
-		  <option>Homologación del TAG</option>
-		  <option>Recarga del TAG</option>
-		</select>
-
-		<label for="cantidad" class="formulario__label"># Placa</label>
-		<input
-		  id="cantidad"
-		  type="text"
-		  class="formulario__input"
-		  placeholder="Número de Placa del Vehículo"
-		/>
-
-		<label for="productos" class="formulario__label">Cédula</label>
-		<input
-		  id="productos"
-		  type="text"
-		  class="formulario__input"
-		  placeholder="0000000000"
-		/>
-
-
-		<button id="submit" class="formulario__submit">Enviar a Whatsapp</button>
+		<button id="submit" class="formulario__submit">Ingresar</button>
 
 		<div id="respuesta"></div>
   
-
+		
 	  </form>
 
-
+	  <br>
+	  <a href="javascript:portafolio()" class="ratras" ><span class="fa fa-home"></span >&nbsp;INICIO</a>
 </section>
 
 
