--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
 
 		<footer>
 			<div><p><img src="img/click.png" alt="logo"></p>
-				<a href="https://cliconline.github.io/CliconlineStudios"><p class="rango">Tarjeta Diamante</p>
-			<p>© Debeloped by CliconlineStudios ®</p></a>
+				<a href="https://cliconline.github.io/CliconlineStudios"><p class="rango">Webmaster Ecualabeles</p>
+			<p>© Design by CliconlineStudios ®</p></a>
 		</div>
 		
 
