--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
 		<footer>
 			<div><p><img src="img/click.png" alt="logo"></p>
-				<a href="https://cliconline.github.io/CliconlineStudios"><p class="rango">Webmaster Ecualabeles</p>
+				<a href="https://cliconline.github.io/CliconlineStudios"><p class="rango">Webmaster Ecualabels</p>
 			<p>© Design by CliconlineStudios ®</p></a>
 		</div>
 		
