--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <a class="side3" href="https://cliconline.github.io/CliconlineStudios/networks.html">Network</a>
 
-<a href="https://play.google.com/store/apps/details?id=io.kodular.will_i_amw07_wp.Cliconline&hl=es">App</a>
+<a href="https://cliconline.github.io/CliconlineStudios/index.html">Partner</a>
 
 <a href="javascript:cerrarside()">Cerrar</a>
    </div>
