--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <a class="side3" href="javascript:admin()"><span class="fa fa-lock"></span >&nbsp;&nbsp;Admin</a>
 
-<a class="side3" href="https://cliconline.github.io/CliconlineStudios/networks.html">Network</a>
+<a class="side3" href="https://youtube.com/playlist?list=PLjsdbOsXCJDFBeEHxRl8DCBHm5rYYUcH4">Videos</a>
 
 <a href="https://cliconline.github.io/CliconlineStudios/index.html">Partner</a>
 
